# FinanceBro

./: .dockerignore  .gitignore  Agents.MD  CLAUDE.md  README.md  docker-compose.yml  env.example  implementation_plan.md
agents/: __init__.py  feature_agent.py
backend/: Dockerfile  requirements.txt  test_news.py  test_pipeline.py
backend/agents/: __init__.py  backtest_agent.py  base_agent.py  data_agent.py  explainability_agent.py  feature_agent.py  model_agent.py  overfitting_agent.py  portfolio_agent.py  risk_agent.py  stats_agent.py  walkforward_agent.py
backend/api/: predict_service.py  serializers.py  server.py  websocket_manager.py
backend/app/: main.py
backend/ml_pipeline/: train_models.py
backend/orchestrator/: __init__.py  run_pipeline.md  run_pipeline.py
backend/quantum/: __init__.py
backend/quantum/cpp/: CMakeLists.txt  __init__.py  build.sh
backend/quantum/cpp/src/: bindings.cpp  qaoa_kernels.hpp
backend/services/: __init__.py  alpaca_stream.py  market_data_hub.py
backend/specs/: backtest_spec.md  model_spec.md  (+6 more)
experiments/: README.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
oldBackend/: test_stock_predictor.py
oldfrontend/: package-lock.json  package.json
orchestrator/: run_pipeline.py
specs/: explainability_spec.md  overfitting_spec.md
subagents/: backtest_agent.md  explainability_agent.md  feature_agent.md  model_agent.md  overfitting_agent.md  regime_agent.md  walkforward_agent.md
tests/: test_backtest_agent.py  test_data_agent.py  test_feature_agent.py
(+141 files in other folders)
